unpackaged/main/default/objects/litify_pm__COI_Search_Term__c/litify_pm__COI_Search_Term__c.object-meta.xml
<CustomObject>
    <label>COI Search Term</label>
    <nameField>
        <displayFormat>CST-{00000000}</displayFormat>
        <label>COI Search Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COI Search Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>