unpackaged/main/default/objects/litify_pm__COI_Search_Term__c/fields/litify_pm__Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Custom_Label__c</fullName>
    <label>Custom Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>