unpackaged/main/default/objects/litify_pm__COI_Search_Term__c/fields/litify_pm__End_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>