unpackaged/main/default/objects/litify_pm__COI_Search_Term__c/fields/litify_pm__Is_Fuzzy__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Fuzzy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fuzzy</label>
    <type>Checkbox</type>
</CustomField>