unpackaged/main/default/objects/litify_pm__COI_Search_Term__c/fields/litify_pm__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>