unpackaged/main/default/objects/litify_pm__COI_Search_Term__c/fields/litify_pm__Search_Term__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Search_Term__c</fullName>
    <label>Search Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>